Refactored Script location and color state